@@ -30,6 +30,7 @@ Improved sound for Metal Man, and a bit for Jolly Park and Verne's World (in gen
 Slightly improved YM262 sound for Sir Lancelot
 Fixed sound problems if a OKI6295 game is used after a OKI6376 game (e.g. GTS3 after Sleic)
 Fixed VGM recording for machines using OKI6295 sound
+Added VGM recording for machines using BSMT2000 sound
 
 *** ROM SUPPORT *** Thanks to Tom Collins, Paul Swan, Dieter Werner, Victor Fernandez, Jordi Beltran, ipdb.org, Billc479, Scott Charles, inkochnito, frisbez
 Correct Dumps:
